--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ header > p {
     max-width: 500px;
     padding-left: 10px;
     padding-right: 10px;
+    padding-bottom: 30px;
     margin: auto; 
     text-shadow: 2px 2px black;
 }
